# data_engineering_course_materials

./: .dockerignore  .gitignore  .gitkeep  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
.githooks/: pre-commit
DailyRetrospective/w1/: 25_1_2.md  25_1_3.md  25_1_6.md  25_1_7.md  25_1_8.md
W2M6/: Dockerfile  W2M5.ipynb
Week1/W1M2/: M2.db  W1M2_SQL_Tutorial.ipynb  W1M2_SQLite3.ipynb
Week1/W1M3/: World_Economies.db  config.ini  country_region_table.json  etl_project_log.txt  extracted_gdp_data.csv  transformed_gdp_data.csv  transformed_gdp_data.json
Week2/W2M1/: W2M1.ipynb  W2M1.py
Week2/W2M2/: W2M2.ipynb  W2M2.py
Week2/W2M3/: W2M3.ipynb  W2M3.py
Week2/W2M4/: W2M4.ipynb  multiprocessing_all_in_one.py
Week2/W2M5/: W2M5.ipynb
Week2/W2M6/: W2M6.ipynb
Week3/W3M1/: Readme.md
Week3/W3M2a/: Readme.md  W3M2.ipynb
Week4/w4m2/: analysis.ipynb
mini_project/web_keyword_visualizer/: app.py  calculator.py  test.py  visualizer.py
missions/: .dockerignore  Dockerfile.Dockerfile  W1.md
missions/W0/: 회고.md
missions/W1/: Countries_by_GDP.json  Dockerfile  M1.ipynb  M2.ipynb  Northwind.db  W1M1.ipynb  W1M1_mtcars_dataset_analysis.ipynb  W1M2.ipynb  W1M2_SQL_Tutorial.ipynb  W1M3 - ETL 프로세스 구현하기.ipynb  W1M3.ipynb  World_Economies.db  data.db  data.db-journal  demo_tb.db  etl_project_gdp.ipynb  etl_project_gdp.py  etl_project_gdp_with_sql.py  etl_project_log.txt  hello_world.ipynb  hello_world.py  requirements.txt  sample.md  (+3 more)
retrospect/: 2025-01-02.md  2025-01-03.md  2025-01-06.md  2025-01-07.md  2025-01-08.md  2025-01-09.md  2025-01-10.md  2025-01-13.md  2025-01-14.md  2025-01-15.md  2025-01-16.md  2025-01-17.md  2025-01-20.md  2025-01-21.md  2025-01-22.md  2025-01-23.md  2025-01-24.md  2025-01-29.md  2025-01-30.md  2025-02-03.md  2025-02-04.md  2025-02-05.md  2025-02-06.md  2025-02-07.md  2025-02-10.md  2025-02-11.md  2025-02-12.md  2025-02-13.md  2025-02-14.md  2025-02-18.md  20250102.md  20250103.md  20250106.md  20250107.md  20250108.md  20250109.md  20250110.md  20250113.md  20250114.md  20250115.md  (+22 more)
reviews/: 20250102.md  20250103.md  20250106.md  20250107.md  20250108.md  20250109.md  review_template.md
self_study/: README.md  testing_parallellism.ipynb
wiki/: studying_hadoop.md  studying_spark.md  w2m5.md
회고/: 2025-01-02.md  2025-01-03.md
(+754 files in other folders)
