[tool.poetry]
name = "softeer"
version = "0.1.0"
description = ""
authors = ["reudekx <reudekx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '/(\.git|\.github|\.pytest_cache|\.venv|__pycache__|migrations|tests|build|dist|\.ipynb)/'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".github", ".pytest_cache", ".venv", "__pycache__", "migrations", "tests", "build", "dist", "*.ipynb"]