[tool.poetry]
name = "softeer"
version = "0.1.0"
description = ""
authors = ["reudekx <reudekx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
black = {extras = ["jupyter"], version = "^24.10.0"}
beautifulsoup4 = "^4.12.3"
pyarrow = "^18.1.0"
wordcloud = "^1.9.4"
google-api-python-client = "^2.158.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
konlpy = "^0.6.0"
spacy = "^3.8.3"
pytest = "^8.3.4"
selenium = "^4.27.1"
openpyxl = "^3.1.5"
mrjob = "^0.7.4"
openai = "^1.60.0"
soynlp = "^0.0.493"
networkx = "^3.4.2"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '/(\.git|\.github|\.pytest_cache|\.venv|__pycache__|migrations|tests|build|dist)/'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".github", ".pytest_cache", ".venv", "__pycache__", "migrations", "tests", "build", "dist"]